[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Asteroid Spawner.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Damage.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 70, 150 )

[node name="Asteroid Spawner" type="Node2D"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Sx" type="Area2D" parent="."]
collision_layer = 2
script = ExtResource( 2 )
damage = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sx"]
modulate = Color( 0, 1, 1, 1 )
position = Vector2( 70, 0 )
shape = SubResource( 1 )

[connection signal="timeout" from="Timer" to="." method="t_spawn"]
[connection signal="area_entered" from="Sx" to="." method="sx_on"]
[connection signal="area_exited" from="Sx" to="." method="sx_off"]
